configure_file(mfsmaster.cfg.in mfsmaster.cfg)
configure_file(mfschunkserver.cfg.in mfschunkserver.cfg)
configure_file(mfsmetalogger.cfg.in mfsmetalogger.cfg)
install(FILES metadata.mfs DESTINATION ${DATA_SUBDIR} RENAME metadata.mfs.empty)
install(FILES mfsexports.cfg DESTINATION ${ETC_SUBDIR}/mfs RENAME mfsexports.cfg.dist)
install(FILES mfshdd.cfg DESTINATION ${ETC_SUBDIR}/mfs RENAME mfshdd.cfg.dist)
install(FILES mfsmount.cfg DESTINATION ${ETC_SUBDIR}/mfs RENAME mfsmount.cfg.dist)
install(FILES mfstopology.cfg DESTINATION ${ETC_SUBDIR}/mfs RENAME mfstopology.cfg.dist)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/mfsmaster.cfg DESTINATION ${ETC_SUBDIR}/mfs RENAME mfsmaster.cfg.dist)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/mfschunkserver.cfg DESTINATION ${ETC_SUBDIR}/mfs RENAME mfschunkserver.cfg.dist)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/mfsmetalogger.cfg DESTINATION ${ETC_SUBDIR}/mfs RENAME mfsmetalogger.cfg.dist)
